<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".home.view.HomeActivity">

    <TextView
        android:id="@+id/lblBusqueda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/himnario_i_c_e"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_marginBottom="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtMusicNumber"
        android:layout_width="234dp"
        android:layout_height="52dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="19dp"
        android:autoSizeTextType="uniform"
        android:background="#C4FFD53B"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:hint="@string/ingrese_numero_de_himno"
        android:inputType="number"
        android:maxLength="3"
        android:textAlignment="center"
        android:textColor="#FDFDFD"
        android:textStyle="italic"
        android:typeface="sans"
        app:layout_constraintBottom_toTopOf="@+id/btnSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblBusqueda" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buscar"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        app:icon="@drawable/ic_baseline_search_24"
        app:layout_constraintTop_toBottomOf="@id/txtMusicNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:scaleType="centerCrop"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSearch"
        app:srcCompat="@drawable/icono_en_menu_principal" />

    <Button
        android:id="@+id/btnFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/btn_favourite"
        app:icon="@drawable/ic_baseline_favorite_24"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:icon="@drawable/ic_baseline_share_24"
        android:text="@string/btn_share"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>