<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Actividades.MainActivity">

    <TextView
        android:id="@+id/lblBusqueda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="81dp"
        android:text="@string/himnario_i_c_e"
        android:textAlignment="center"
        android:textColor="#F4F1F1"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081" />

    <EditText
        android:id="@+id/txtNumeroHimno"
        android:layout_width="234dp"
        android:layout_height="52dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="165dp"
        android:autoSizeTextType="uniform"
        android:background="#C4FFD53B"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:hint="@string/ingrese_numero_de_himno"
        android:inputType="number"
        android:maxLength="3"
        android:textAlignment="center"
        android:textColor="#FDFDFD"
        android:textStyle="italic"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnBuscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblBusqueda"
        app:layout_constraintTop_toTopOf="@+id/lblBusqueda"
        app:layout_constraintVertical_bias="0.641"
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="188dp" />

    <Button
        android:id="@+id/btnBuscar"
        android:layout_width="186dp"
        android:layout_height="59dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="235dp"
        android:background="#C9F60909"
        android:backgroundTint="#27E3FB"
        android:fontFamily="sans-serif-medium"
        android:onClick="btnBuscar"
        android:text="@string/buscar"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:icon="@android:drawable/ic_search_category_default"
        app:iconPadding="5sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.437" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="291dp"
        android:layout_height="271dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBuscar"
        app:srcCompat="@drawable/icono_en_menu_principal" />

    <Button
        android:id="@+id/btnFavoritos"
        android:layout_width="159dp"
        android:layout_height="59dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="323dp"
        android:onClick="btnFavoritos"
        android:text="Favoritos"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.944"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.955" />

</RelativeLayout>