<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewBusqueda"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".search.view.SearchActivity">

    <Button
        android:id="@+id/btnPrevious"
        android:layout_width="90dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="12dp"
        android:background="#F80101"
        android:text="Anterior"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblSong" />

    <TextView
        android:id="@+id/lblTitle"
        android:layout_width="293dp"
        android:layout_height="34dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lblSong"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.633"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/lblSong"
        android:layout_width="match_parent"
        android:layout_height="588dp"
        android:layout_below="@+id/lblTitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="58dp"
        android:background="#B0F3EDED"
        android:scrollbars="vertical"
        android:text="@string/canci_n"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.609" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="52dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:background="@color/colir"
        app:icon="@drawable/abc_vector_test"
        app:layout_constraintBottom_toTopOf="@+id/lblSong"
        app:layout_constraintEnd_toEndOf="@+id/lblTitle"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <TextView
        android:id="@+id/lblVersiculos"
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/versiculos"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/lblSong"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTitle" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="97dp"
        android:layout_height="36dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="12dp"
        android:background="#F80101"
        android:text="Siguiente"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblSong" />

    <ImageButton
        android:id="@+id/btnFavorite"
        android:layout_width="63dp"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-3dp"
        android:adjustViewBounds="true"
        android:background="#00020202"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnNext"
        app:layout_constraintStart_toEndOf="@+id/btnPrevious"
        app:layout_constraintTop_toBottomOf="@+id/lblSong"
        app:srcCompat="@android:drawable/star_big_off" />
</RelativeLayout>